# chip8-papilio

./: .gitignore  README.md  chip8-papilio.cabal
ise/: .gitignore  Make.rules  Make.vars  Makefile
ise.template/: xise.in  xise.xtpl  xst.in
ise/ipcore_dir/: dcm_32_to_50p35.xaw
src/: ALU.hs  Build.hs  CPU.hs  Chip8.hs  DCM.hs  Font.hs  Input.hs  Types.hs  Utils.hs  VGA640x480.hs  VGADriver.hs  Video.hs
src/Development/KansasLava/Shake/: Xilinx.hs
src/vhdl/: dcm.ucf  dcm.vhdl  main.vhdl
